--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "dev": "yarn storybook",
+    "test": "test-storybook",
     "build": "tsc -p tsconfig.publish.json && vite build --config vite.publish.config.ts",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -30,11 +31,13 @@
     "@babel/core": "^7.21.3",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-interactions": "^7.0.8",
     "@storybook/addon-links": "^6.5.16",
     "@storybook/builder-vite": "^0.4.2",
+    "@storybook/jest": "^0.1.0",
     "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/test-runner": "^0.10.0",
+    "@storybook/testing-library": "^0.1.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
