--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     }
   },
   "scripts": {
-    "dev": "yarn storybook",
+    "dev": "storybook dev -p 6006",
     "test": "test-storybook",
     "build": "tsc -p tsconfig.publish.json && vite build --config vite.publish.config.ts",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -29,13 +28,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-actions": "^7.0.8",
+    "@storybook/addon-essentials": "^7.0.8",
     "@storybook/addon-interactions": "^7.0.8",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/addon-links": "^7.0.8",
     "@storybook/jest": "^0.1.0",
-    "@storybook/react": "^6.5.16",
+    "@storybook/react": "^7.0.8",
+    "@storybook/react-vite": "^7.0.8",
     "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.1.0",
     "@types/react": "^18.0.28",
@@ -43,6 +42,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^8.3.0",
     "react-dom": "^18.2.0",
+    "storybook": "^7.0.8",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-tsconfig-paths": "^4.0.7"
